gitops/apps/media/radarr/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
  tls: {}
